@@ -54,3 +54,4 @@ WinDivert 1.1.6
 WinDivert 1.1.7
     - Fixed incorrect IPV6 TCP/UDP checksum calculation in
       WinDivertHelperCalcChecksums().
+    - Driver now calculates checksums for IPV6 packets.
